# subspy

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: bitset.rs  cli.rs  debug.rs  entry.rs  git.rs  lib.rs  list.rs  main.rs  paint.rs  proc.rs  prompt.rs  reindex.rs  shutdown.rs  status.rs  template.rs  watch.rs
src/connection/: client.rs  client_handler.rs  mod.rs  progress.rs  protocol.rs  transport.rs  watch_server.rs
src/connection/watch_server/: classify.rs  debounce.rs  debug.rs  event_loop.rs  indexing.rs  layout.rs  mod.rs  placement.rs  trace.rs  update.rs
src/status/: case_collision.rs  conflict.rs  display.rs  header.rs  human_tests.rs  interleave.rs  long_tests.rs  mod.rs  porcelain_tests.rs  porcelain_v1.rs  porcelain_v2.rs  quote.rs  relativize.rs  rename_score.rs  short.rs  short_tests.rs  submodule.rs  tracked.rs  xy_line.rs
src/status/snapshots/human/: cherry_pick_with_conflict.snapshot  deleted_staged.snapshot  staged_modified.snapshot  staged_new.snapshot  submodule_new_commits.snapshot  untracked_high_byte_filename.snapshot
src/status/snapshots/long/: assume_unchanged_suppresses.snapshot  bisect.snapshot  cherry_pick_with_conflict.snapshot  deleted_workdir.snapshot  detached_at_tag.snapshot  detached_from_tag.snapshot  ignored_files.snapshot  ignored_with_untracked.snapshot  merge_with_conflict_in_subdir.snapshot  modified_workdir.snapshot  moved_modified_unstaged.snapshot  nested_superproject_modified.snapshot  no_ahead_behind_upstream_diverged.snapshot  quote_path_false_high_byte.snapshot  rebase_apply_with_conflict.snapshot  rebase_interactive_multi_command.snapshot  rebase_interactive_with_conflict.snapshot  rename_below_threshold_staged.snapshot  rename_below_threshold_staged_wt_modified.snapshot  renamed_staged.snapshot  renamed_then_worktree_deleted.snapshot  submodule_deleted_workdir.snapshot  submodule_gitlink_conflict_dirty.snapshot  submodule_modified.snapshot  submodule_renamed.snapshot  submodules_interleaved_staged.snapshot  submodules_interleaved_unstaged.snapshot  unborn_staged.snapshot  unborn_untracked.snapshot  untracked_all_in_dir.snapshot  untracked_files.snapshot  untracked_in_dir.snapshot  upstream_diverged.snapshot  upstream_gone.snapshot
src/status/tests/: fixtures.rs  long.rs  mod.rs  porcelain.rs  short.rs
tests/: amend.rs  basic.rs  checkout.rs  cherry_pick.rs  clean.rs  lifecycle.rs  merge.rs  rebase.rs  reindex_and_events.rs  reset.rs  server_lifecycle.rs  shim.rs  stash.rs  status_reporting.rs  submodule_management.rs  worktree.rs
tests/common/: mod.rs
testutil/: Cargo.toml
testutil/src/: lib.rs
xtask/: Cargo.toml  plot_git_stats.py  plot_timing.py
xtask/src/: main.rs
(+22 files in other folders)
