[package]
name = "subspy"
version = "0.1.0"
edition = "2024"
authors = [ "Will Lillis <will.lillis24@gmail.com>" ]
repository = "https://github.com/WillLillis/subspy"
license = "MIT"
readme = "README.md"
description = "A 'git status' caching utility for repositories with many submodules"
keywords = ["cli", "git"]
categories = ["command-line-utilities", "development-tools"]


[lints.clippy]
dbg_macro = "deny"
todo = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"
redundant_closure_for_method_calls = "allow"

[dependencies]
anstyle = "1.0.13"
bincode = "2.0.1"
bitflags = "2.10.0"
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-channel = "0.5.15"
dunce = "1.0.5"
etcetera = "0.11.0"
flexi_logger = "0.31.7"
git2 = { version = "0.20.3", features = ["vendored-libgit2", "vendored-openssl"] }
indicatif = "0.18.3"
interprocess = "2.2.3"
log = "0.4.29"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
thiserror = "2.0.17"
