[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
clap.workspace = true
etcetera.workspace = true
flexi_logger.workspace = true
git2.workspace = true
log.workspace = true
rand = "0.9"
subspy = { path = ".." }
tempfile.workspace = true
testutil = { path = "../testutil" }
thiserror.workspace = true
